# trail

./: .gitattributes  .gitignore  .trail.toml.example  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bindings/node/: Cargo.toml  README.md  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/.cargo/: config.toml
bindings/python/src/: lib.rs
crates/trail-cli/: Cargo.toml
crates/trail-cli/src/: main.rs
crates/trail-cli/tests/: cli.rs
crates/trail-core/: Cargo.toml
crates/trail-core/examples/: bench.rs
crates/trail-core/proptest-regressions/: store.txt
crates/trail-core/src/: config.rs  error.rs  lib.rs  model.rs  scheduler.rs  store.rs  walk.rs
skills/trail/: SKILL.md
wrappers/go/: README.md  go.mod  trail.go
wrappers/python/: README.md  pyproject.toml  trail.py
wrappers/ruby/: README.md  trail.rb
wrappers/typescript/: README.md  package.json  trail.d.ts  trail.mjs
