[workspace]
members = ["crates/trail-core", "crates/trail-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Optimize test builds slightly: bundled SQLite and the ignore walker benefit
# from a little optimization without paying full release compile times.
[profile.test]
opt-level = 1
