[workspace]
members = ["crates/trail-core", "crates/trail-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
# Floor set by the dependency tree (clap 4.6 / toml 1.1 / ignore 0.4.26 are
# edition-2024 crates needing Rust 1.85). CI verifies this with a pinned job.
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/Just-Understanding-Data-Ltd/trail"
homepage = "https://github.com/Just-Understanding-Data-Ltd/trail"
keywords = ["cli", "agent", "coverage", "scheduler", "sqlite"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Optimize test builds slightly: bundled SQLite and the ignore walker benefit
# from a little optimization without paying full release compile times.
[profile.test]
opt-level = 1
