[package]
name = "trail-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for trail: hands agents the next folder to cover, per task-name."

[[bin]]
name = "trail"
path = "src/main.rs"

[dependencies]
trail-core = { path = "../trail-core" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

[features]
churn = ["trail-core/churn"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = "3"
