[package]
name = "trail-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for trail: hands agents the next folder to cover, per task-name."

[[bin]]
name = "trail"
path = "src/main.rs"

[dependencies]
# version is required (alongside path) so `cargo publish` accepts the dep.
trail-core = { path = "../trail-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

[features]
churn = ["trail-core/churn"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = { workspace = true }
tempfile = "3"
