[package]
name = "trail-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Coverage scheduler with memory: hands agents the next folder to work on, per task-name."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
toml = "1"
thiserror = "2"
# Pinned to 0.32: rusqlite 0.40 pulls libsqlite3-sys 0.38, whose build script
# uses the unstable `cfg_select!` and fails on stable Rust. 0.32 bundles a
# recent SQLite (3.4x, has UPDATE ... RETURNING) and builds cleanly.
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
# Optional git churn signal. Off by default so the common build needs no libgit2.
git2 = { version = "0.21", optional = true, default-features = false, features = ["vendored-libgit2"] }

[features]
default = []
churn = ["dep:git2"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
