[project]
name = "trail-cli-wrapper"
version = "0.1.0"
description = "Thin Python wrapper around the `trail` coverage-scheduler CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["trail"]
